Migrating links to new format

--- a/website/content/docs/api-clients/api.mdx
+++ b/website/content/docs/api-clients/api.mdx
@@ -9,11 +9,11 @@ description: |-
 
 Boundary's API is a JSON-based HTTP API that adheres to a set of standards that are rigidly followed. At its core, it is a standards-compliant JSON API for both input and output.
 
-Before reading this page, it is useful to understand Boundary's [domain model](/docs/concepts/domain-model) to be aware of the terminology used here.
+Before reading this page, it is useful to understand Boundary's [domain model](/boundary/docs/concepts/domain-model) to be aware of the terminology used here.
 
 Boundary's API is also described via OpenAPI v2; the version corresponding to any tag of Boundary's source code can be found in Boundary's [GitHub repository](https://github.com/hashicorp/boundary/blob/main/internal/gen/controller.swagger.json).
 
--> **NOTE:** A rendered version of this generated API definition can be found on the [API page](/api-docs).
+-> **NOTE:** A rendered version of this generated API definition can be found on the [API page](/boundary/api-docs).
 
 Boundary's current API version is 1; all API paths begin with `/v1/`.
 
