--- a/website/content/docs/api-clients/cli.mdx
+++ b/website/content/docs/api-clients/cli.mdx
@@ -23,12 +23,12 @@ Below is the typical structure for most Boundary CLI commands:
 boundary <command> <subcommand> [options] [args]
 ```
 
-- `options` - [Client](/docs/api-clients/cli#client-options) and [connection](/docs/api-clients/cli#connection-options) options to specify additional settings
+- `options` - [Client](/boundary/docs/api-clients/cli#client-options) and [connection](/boundary/docs/api-clients/cli#connection-options) options to specify additional settings
 - `args` - API arguments specific to the operation
 
 #### Examples:
 
-The following shows use of the [`-addr`](/docs/api-clients/cli#addr) flag to specify which Boundary controller to send the request to.
+The following shows use of the [`-addr`](/boundary/docs/api-clients/cli#addr) flag to specify which Boundary controller to send the request to.
 
 ```shell-session
 $ boundary authenticate password \
