--- a/website/content/docs/api-clients/desktop.mdx
+++ b/website/content/docs/api-clients/desktop.mdx
@@ -14,7 +14,7 @@ using your favorite tooling!
 
 ## Getting Started
 
--> If you're running Boundary for the first time, [download the latest binary](https://www.boundaryproject.io/downloads)
+-> If you're running Boundary for the first time, [download the latest binary](/boundary/downloads)
 and run it in `dev` mode locally so you can have a server to run against:
 
 ```shell-session
