--- a/website/content/docs/common-workflows/index.mdx
+++ b/website/content/docs/common-workflows/index.mdx
@@ -6,6 +6,6 @@ description: Common workflows for Boundary
 
 # Common Workflows
 
-This section covers common workflows for managing targets, identities, and sessions within Boundary. This section assumes you've already covered the [Getting Started](/docs/getting-started) section and are familiar with basic Boundary knowledge. This section extends Getting Started by showing how to accomplish common workflows in the admin console, the command line, and with our [Terraform provider](https://github.com/hashicorp/terraform-provider-boundary).
+This section covers common workflows for managing targets, identities, and sessions within Boundary. This section assumes you've already covered the [Getting Started](/boundary/docs/getting-started) section and are familiar with basic Boundary knowledge. This section extends Getting Started by showing how to accomplish common workflows in the admin console, the command line, and with our [Terraform provider](https://github.com/hashicorp/terraform-provider-boundary).
 
-For more detailed guides on using Boundary please consult our [Learn site](https://learn.hashicorp.com/boundary).
+For more detailed guides on using Boundary please consult our [Learn site](/boundary/tutorials).
