--- a/website/content/docs/concepts/domain-model/groups.mdx
+++ b/website/content/docs/concepts/domain-model/groups.mdx
@@ -34,24 +34,24 @@ A group has the following configurable attributes:
 - [Role][]
 - [User][]
 
-[global]: /docs/concepts/domain-model/scopes#global
-[group]: /docs/concepts/domain-model/groups
-[groups]: /docs/concepts/domain-model/groups
-[organization]: /docs/concepts/domain-model/scopes#organizations
-[permissions]: /docs/concepts/security/permissions
-[project]: /docs/concepts/domain-model/scopes#projects
-[role]: /docs/concepts/domain-model/roles
-[roles]: /docs/concepts/domain-model/roles
-[scope]: /docs/concepts/domain-model/scopes
-[user]: /docs/concepts/domain-model/users
-[users]: /docs/concepts/domain-model/users
+[global]: /boundary/docs/concepts/domain-model/scopes#global
+[group]: /boundary/docs/concepts/domain-model/groups
+[groups]: /boundary/docs/concepts/domain-model/groups
+[organization]: /boundary/docs/concepts/domain-model/scopes#organizations
+[permissions]: /boundary/docs/concepts/security/permissions
+[project]: /boundary/docs/concepts/domain-model/scopes#projects
+[role]: /boundary/docs/concepts/domain-model/roles
+[roles]: /boundary/docs/concepts/domain-model/roles
+[scope]: /boundary/docs/concepts/domain-model/scopes
+[user]: /boundary/docs/concepts/domain-model/users
+[users]: /boundary/docs/concepts/domain-model/users
 
 ## Service API Docs
 
 The following services are relevant to this resource:
 
-- [Group Service](/api-docs/group-service)
+- [Group Service](/boundary/api-docs/group-service)
 
 ## Tutorial
 
-Refer to the [Manage Users and Groups with HCP Boundary](https://learn.hashicorp.com/tutorials/boundary/hcp-manage-users-groups) tutorial to learn how to complete user management related tasks.
+Refer to the [Manage Users and Groups with HCP Boundary](/boundary/tutorials/hcp-administration/hcp-manage-users-groups) tutorial to learn how to complete user management related tasks.
