--- a/website/content/docs/concepts/domain-model/roles.mdx
+++ b/website/content/docs/concepts/domain-model/roles.mdx
@@ -31,22 +31,22 @@ A role has the following configurable attributes:
 - [Project][]
 - [User][]
 
-[group]: /docs/concepts/domain-model/groups
-[groups]: /docs/concepts/domain-model/groups
-[managed group]: /docs/concepts/domain-model/managed-groups
-[managed groups]: /docs/concepts/domain-model/managed-groups
-[permissions]: /docs/concepts/security/permissions
-[project]: /docs/concepts/domain-model/scopes#projects
-[scope]: /docs/concepts/domain-model/scopes
-[user]: /docs/concepts/domain-model/users
-[users]: /docs/concepts/domain-model/users
+[group]: /boundary/docs/concepts/domain-model/groups
+[groups]: /boundary/docs/concepts/domain-model/groups
+[managed group]: /boundary/docs/concepts/domain-model/managed-groups
+[managed groups]: /boundary/docs/concepts/domain-model/managed-groups
+[permissions]: /boundary/docs/concepts/security/permissions
+[project]: /boundary/docs/concepts/domain-model/scopes#projects
+[scope]: /boundary/docs/concepts/domain-model/scopes
+[user]: /boundary/docs/concepts/domain-model/users
+[users]: /boundary/docs/concepts/domain-model/users
 
 ## Service API Docs
 
 The following services are relevant to this resource:
 
-- [Role Service](/api-docs/role-service)
+- [Role Service](/boundary/api-docs/role-service)
 
 ## Tutorial
 
-Refer to the [Managed Roles and Permissions with HCP Boundary](https://learn.hashicorp.com/tutorials/boundary/hcp-manage-roles) tutorial to learn how to create a role in Boundary.
+Refer to the [Managed Roles and Permissions with HCP Boundary](/boundary/tutorials/hcp-administration/hcp-manage-roles) tutorial to learn how to create a role in Boundary.
