--- a/website/content/docs/concepts/domain-model/scopes.mdx
+++ b/website/content/docs/concepts/domain-model/scopes.mdx
@@ -57,34 +57,34 @@ A scope has the following configurable attributes:
 - [Target][]
 - [User][]
 
-[auth method]: /docs/concepts/domain-model/auth-methods
-[auth methods]: /docs/concepts/domain-model/auth-methods
-[credential store]: /docs/concepts/domain-model/credential-stores
-[credential stores]: /docs/concepts/domain-model/credential-stores
-[global]: /docs/concepts/domain-model/scopes#global
-[group]: /docs/concepts/domain-model/groups
-[groups]: /docs/concepts/domain-model/groups
-[host catalog]: /docs/concepts/domain-model/host-catalogs
-[host catalogs]: /docs/concepts/domain-model/host-catalogs
-[organization]: /docs/concepts/domain-model/scopes#organizations
-[organizations]: /docs/concepts/domain-model/scopes#organizations
-[permission]: /docs/concepts/security/permissions
-[permissions]: /docs/concepts/security/permissions
-[project]: /docs/concepts/domain-model/scopes#projects
-[projects]: /docs/concepts/domain-model/scopes#projects
-[role]: /docs/concepts/domain-model/roles
-[roles]: /docs/concepts/domain-model/roles
-[target]: /docs/concepts/domain-model/targets
-[targets]: /docs/concepts/domain-model/targets
-[user]: /docs/concepts/domain-model/users
-[users]: /docs/concepts/domain-model/users
+[auth method]: /boundary/docs/concepts/domain-model/auth-methods
+[auth methods]: /boundary/docs/concepts/domain-model/auth-methods
+[credential store]: /boundary/docs/concepts/domain-model/credential-stores
+[credential stores]: /boundary/docs/concepts/domain-model/credential-stores
+[global]: /boundary/docs/concepts/domain-model/scopes#global
+[group]: /boundary/docs/concepts/domain-model/groups
+[groups]: /boundary/docs/concepts/domain-model/groups
+[host catalog]: /boundary/docs/concepts/domain-model/host-catalogs
+[host catalogs]: /boundary/docs/concepts/domain-model/host-catalogs
+[organization]: /boundary/docs/concepts/domain-model/scopes#organizations
+[organizations]: /boundary/docs/concepts/domain-model/scopes#organizations
+[permission]: /boundary/docs/concepts/security/permissions
+[permissions]: /boundary/docs/concepts/security/permissions
+[project]: /boundary/docs/concepts/domain-model/scopes#projects
+[projects]: /boundary/docs/concepts/domain-model/scopes#projects
+[role]: /boundary/docs/concepts/domain-model/roles
+[roles]: /boundary/docs/concepts/domain-model/roles
+[target]: /boundary/docs/concepts/domain-model/targets
+[targets]: /boundary/docs/concepts/domain-model/targets
+[user]: /boundary/docs/concepts/domain-model/users
+[users]: /boundary/docs/concepts/domain-model/users
 
 ## Service API Docs
 
 The following services are relevant to this resource:
 
-- [Scope Service](/api-docs/scope-service)
+- [Scope Service](/boundary/api-docs/scope-service)
 
 ## Tutorial
 
-Refer to the [Manage Scopes with HCP Boundary](https://learn.hashicorp.com/tutorials/boundary/hcp-manage-scopes) tutorial to learn how to create an org scope and a project scope.
+Refer to the [Manage Scopes with HCP Boundary](/boundary/tutorials/hcp-administration/hcp-manage-scopes) tutorial to learn how to create an org scope and a project scope.
