--- a/website/content/docs/concepts/domain-model/users.mdx
+++ b/website/content/docs/concepts/domain-model/users.mdx
@@ -41,20 +41,20 @@ A user has the following configurable attributes:
 - [Organization][]
 - [Role][]
 
-[account]: /docs/concepts/domain-model/accounts
-[accounts]: /docs/concepts/domain-model/accounts
-[auth method]: /docs/concepts/domain-model/auth-methods
-[global]: /docs/concepts/domain-model/scopes#global
-[group]: /docs/concepts/domain-model/groups
-[groups]: /docs/concepts/domain-model/groups
-[organization]: /docs/concepts/domain-model/scopes#organizations
-[permissions]: /docs/concepts/security/permissions
-[role]: /docs/concepts/domain-model/roles
-[roles]: /docs/concepts/domain-model/roles
-[scope]: /docs/concepts/domain-model/scopes
+[account]: /boundary/docs/concepts/domain-model/accounts
+[accounts]: /boundary/docs/concepts/domain-model/accounts
+[auth method]: /boundary/docs/concepts/domain-model/auth-methods
+[global]: /boundary/docs/concepts/domain-model/scopes#global
+[group]: /boundary/docs/concepts/domain-model/groups
+[groups]: /boundary/docs/concepts/domain-model/groups
+[organization]: /boundary/docs/concepts/domain-model/scopes#organizations
+[permissions]: /boundary/docs/concepts/security/permissions
+[role]: /boundary/docs/concepts/domain-model/roles
+[roles]: /boundary/docs/concepts/domain-model/roles
+[scope]: /boundary/docs/concepts/domain-model/scopes
 
 ## Service API Docs
 
 The following services are relevant to this resource:
 
-- [User Service](/api-docs/user-service)
+- [User Service](/boundary/api-docs/user-service)
