--- a/website/content/docs/concepts/security/permissions/resource-table.mdx
+++ b/website/content/docs/concepts/security/permissions/resource-table.mdx
@@ -12,7 +12,7 @@ permissions. Note that it's not exhaustive; for brevity it does _not_ show
 wildcard or templated grant strings.
 
 Additionally, this does not include available output fields; see the [service
-documentation](https://www.boundaryproject.io/api-docs) for guidance.
+documentation](/boundary/api-docs) for guidance.
 
 <!-- BEGIN TABLE -->
 
