--- a/website/content/docs/configuration/worker/pki-worker.mdx
+++ b/website/content/docs/configuration/worker/pki-worker.mdx
@@ -117,8 +117,8 @@ kms "aead" {
 
 
 ```
-[kms workers]: /docs/configuration/worker/kms-worker
+[kms workers]: /boundary/docs/configuration/worker/kms-worker
 
 ## Tutorial
 
-Refer to the [Self-Managed Worker Registration with HCP Boundary](https://learn.hashicorp.com/tutorials/boundary/hcp-manage-workers) tutorial to learn how to register and manage PKI workers.
+Refer to the [Self-Managed Worker Registration with HCP Boundary](/boundary/tutorials/hcp-administration/hcp-manage-workers) tutorial to learn how to register and manage PKI workers.
