--- a/website/content/docs/getting-started/connect-to-target.mdx
+++ b/website/content/docs/getting-started/connect-to-target.mdx
@@ -8,7 +8,7 @@ description: |-
 # Connect to Your First Target
 
 The [Quick setup
-wizard](/docs/getting-started/deploy-and-login#login-to-hcp-boundary)
+wizard](/boundary/docs/getting-started/deploy-and-login#login-to-hcp-boundary)
 is the fastest way to onboard a target to HCP Boundary.
 
 ![Setup Wizard](/img/setup-wizard-target.png)
@@ -224,10 +224,10 @@ proxy details.
 
 ## Tutorial
 
-Refer to the [Connect to your First Target](https://learn.hashicorp.com/tutorials/boundary/hcp-getting-started-connect?in=boundary/hcp-getting-started) tutorial for steps on how to create a host catalog, host set, and a target in Boundary.
+Refer to the [Connect to your First Target](/boundary/tutorials/hcp-getting-started/hcp-getting-started-connect) tutorial for steps on how to create a host catalog, host set, and a target in Boundary.
 
 ## Next Steps
 
 Refer to our [basic administration
-workflows](https://learn.hashicorp.com/collections/boundary/hcp-administration) tutorial series
+workflows](/boundary/tutorials/hcp-administration) tutorial series
 for in depth discussions on managing scopes, targets, identities, and sessions.
