--- a/website/content/docs/getting-started/deploy-and-login.mdx
+++ b/website/content/docs/getting-started/deploy-and-login.mdx
@@ -21,15 +21,15 @@ To get started with HCP Boundary, users need:
 
 - A [HashiCorp Cloud Platform](https://portal.cloud.hashicorp.com/sign-up)
   account
-- [Installation](https://learn.hashicorp.com/tutorials/boundary/hcp-getting-started-install)
+- [Installation](/boundary/tutorials/hcp-getting-started/hcp-getting-started-install)
   of the Boundary CLI
-- A [Boundary binary](https://www.boundaryproject.io/downloads) in your `$PATH`
+- A [Boundary binary](/boundary/downloads) in your `$PATH`
 - Optionally, an [installation of Boundary
-  Desktop](https://learn.hashicorp.com/tutorials/boundary/hcp-getting-started-desktop-app)
+  Desktop](/boundary/tutorials/hcp-getting-started/hcp-getting-started-desktop-app)
 
 If you prefer to get started on your local machine, refer to [Run and Login in
-Dev Mode](/docs/oss/installing/run-and-login). For more information on Boundary
-OSS and self-managed installations, refer to [Boundary OSS](/docs/oss).
+Dev Mode](/boundary/docs/oss/installing/run-and-login). For more information on Boundary
+OSS and self-managed installations, refer to [Boundary OSS](/boundary/docs/oss).
 
 ## Deploy an HCP Boundary Cluster
 
@@ -138,7 +138,7 @@ help pages.
 <Tab heading="Desktop Client">
 
 
-[Boundary Desktop](https://www.boundaryproject.io/downloads) can be used to
+[Boundary Desktop](/boundary/downloads) can be used to
 connect to HCP Boundary.
 
 To get started with Boundary Desktop:
@@ -209,15 +209,15 @@ To find your environment’s default `auth_method_id`:
 ## Tutorial
 
 - Refer to the [Create a Boundary Instance on
-  HCP](https://learn.hashicorp.com/tutorials/boundary/hcp-getting-started-create)
+  HCP](/boundary/tutorials/hcp-getting-started/hcp-getting-started-create)
   tutorial to learn how to deploy a Boundary instance.
 - Refer to the [Install Boundary
-  Desktop](https://learn.hashicorp.com/tutorials/boundary/hcp-getting-started-desktop-app)
+  Desktop](/boundary/tutorials/hcp-getting-started/hcp-getting-started-desktop-app)
   tutorial to learn how to use the Boundary desktop to connect to a running HCP
   Boundary instance.
 
 
 ## Next Steps
 
-See [connecting to your first target](/docs/getting-started/connect-to-target)
+See [connecting to your first target](/boundary/docs/getting-started/connect-to-target)
 for how to use HCP Boundary to run your first SSH session.
