--- a/website/content/docs/getting-started/index.mdx
+++ b/website/content/docs/getting-started/index.mdx
@@ -16,20 +16,20 @@ There are two options to get started with Boundary:
   available as a freemium service. HCP Boundary allows users to run their own
   worker proxies, preventing exposure of your network to HashiCorp or clients.
   Some enterprise features are only available with HCP Boundary. Review the [Get
-  started with HCP Boundary](/docs/getting-started/deploy-and-login) page to
+  started with HCP Boundary](/boundary/docs/getting-started/deploy-and-login) page to
   learn more.
 - **Boundary OSS** is an open source distribution of Boundary that users can run
   in their own environments. The [Getting Started with Boundary
-  OSS](/docs/oss/installing/dev-mode) page discusses running Boundary
+  OSS](/boundary/docs/oss/installing/dev-mode) page discusses running Boundary
   in Dev mode on your local machine, allowing you to get started with the OSS distribution quickly.
 
 We recommend you use the Boundary model that best meets your intended use case.
 If you’re not sure what’s best for you, we recommend reviewing the [Getting
-started with HCP Boundary](/docs/getting-started/deploy-and-login) page.
+started with HCP Boundary](/boundary/docs/getting-started/deploy-and-login) page.
 
 # Key Concepts
 
 Before getting started with Boundary, it's important to understand a few key
-concepts. Please consult our [Boundary concepts](/docs/concepts) page to
+concepts. Please consult our [Boundary concepts](/boundary/docs/concepts) page to
 familiarize yourself with Boundary's architecture and terminology.
 
