--- a/website/content/docs/index.mdx
+++ b/website/content/docs/index.mdx
@@ -8,6 +8,6 @@ description: Boundary reference documentation
 
 Welcome to the Boundary reference documentation! The documentation is reference material for Boundary's concepts and available features.
 
-- Get started using Boundary with our [step-by-step onboarding tutorial](https://learn.hashicorp.com/boundary) at HashiCorp Learn.
-- Install Boundary by using a precompiled binary or building from source with the documentation [here](/docs/getting-started/)
-- Learn about Boundary's [core concepts](/docs/concepts/) for how identities, permissions, and resources are organized.
+- Get started using Boundary with our [step-by-step onboarding tutorial](/boundary/tutorials) at HashiCorp Learn.
+- Install Boundary by using a precompiled binary or building from source with the documentation [here](/boundary/docs/getting-started/)
+- Learn about Boundary's [core concepts](/boundary/docs/concepts/) for how identities, permissions, and resources are organized.
