--- a/website/content/docs/oss/index.mdx
+++ b/website/content/docs/oss/index.mdx
@@ -28,4 +28,4 @@ Boundary does not require an agent to be installed on the end host.
 
 ## Tutorial
 
-Refer to the [Get Started with self-hosted Boundary](https://learn.hashicorp.com/collections/boundary/oss-getting-started) tutorial series to learn how to install and configure Boundary.
+Refer to the [Get Started with self-hosted Boundary](/boundary/tutorials/oss-getting-started) tutorial series to learn how to install and configure Boundary.
