--- a/website/content/docs/oss/installing/connect-to-dev-target.mdx
+++ b/website/content/docs/oss/installing/connect-to-dev-target.mdx
@@ -30,7 +30,7 @@ boundary connect -target-id ttcp_0987654321
 
 For the purpose of this guide, both of these targets accomplish the same goal,
 however they have different purposes. Refer to the
-[domain](/docs/concepts/domain-model/index) documentation for more information.
+[domain](/boundary/docs/concepts/domain-model/index) documentation for more information.
 
 For the rest of this guide, assume the default is used.
 
@@ -216,5 +216,5 @@ proxy details.
 ## Next Steps
 
 See our [basic administration
-workflows](https://learn.hashicorp.com/collections/boundary/oss-administration)
+workflows](/boundary/tutorials/oss-administration)
 for in depth discussion on managing scopes, targets, identities, and sessions.
