--- a/website/content/docs/oss/installing/systemd.mdx
+++ b/website/content/docs/oss/installing/systemd.mdx
@@ -15,7 +15,7 @@ This section covers how to install Boundary under the [systemd](https://systemd.
 
 1. `/etc/boundary-${TYPE}.hcl`: Configuration file for the boundary service.
 
-2. `/usr/local/bin/boundary`: The Boundary binary, which can be built from the [source](https://github.com/hashicorp/boundary) or downloaded from our [release page](https://www.boundaryproject.io/downloads).
+2. `/usr/local/bin/boundary`: The Boundary binary, which can be built from the [source](https://github.com/hashicorp/boundary) or downloaded from our [release page](/boundary/downloads).
 
 3. `/etc/systemd/system/boundary-${TYPE}.service`: Systemd unit file for the Boundary service.
 
