--- a/website/content/docs/oss/operations/metrics.mdx
+++ b/website/content/docs/oss/operations/metrics.mdx
@@ -83,7 +83,7 @@ measurements collected.
 Defining a listener stanza in the config file is sufficient for enabling metrics
 reporting in Boundary. For details on what fields are allowed in this stanza,
 refer to the documentation about [TCP
-Listener](/docs/configuration/listener/tcp).
+Listener](/boundary/docs/configuration/listener/tcp).
 
 An example listener stanza:
 
@@ -97,5 +97,5 @@ listener "tcp" {
 ## Tutorial
 
 Refer to the [Prometheus
-Metrics](https://learn.hashicorp.com/tutorials/boundary/prometheus-metrics)
+Metrics](/boundary/tutorials/oss-configuration/prometheus-metrics)
 tutorial for a step-by-step introduction to metrics.
