--- a/website/content/docs/overview/vs/secrets-management.mdx
+++ b/website/content/docs/overview/vs/secrets-management.mdx
@@ -20,4 +20,4 @@ _Does Boundary replace a secrets management solution?_
 Boundary is **not** intended to replace an existing secrets management solution.
 Boundary is designed to work with your secrets management solution to comprehensively secure infrastructure access.
 For many users, Boundary's native static credential management capabilities may be sufficient.
-For those that require more advanced credential workflows, such as dynamic credentials, [HashiCorp Vault](https://www.vaultproject.io/) is a natural complement to Boundary.
+For those that require more advanced credential workflows, such as dynamic credentials, [HashiCorp Vault](/vault) is a natural complement to Boundary.
