--- a/website/content/docs/release-notes/v0_10_0.mdx
+++ b/website/content/docs/release-notes/v0_10_0.mdx
@@ -5,13 +5,13 @@ description: |-
   Boundary release notes for v0.10.0
 ---
 
-# [Boundary v0.10.0](https://www.boundaryproject.io/downloads)
+# [Boundary v0.10.0](/boundary/downloads)
 
 The release notes below contain information about new functionality available in the Boundary v0.10.0 release.
 To see a granular record of when each item was merged into the Boundary project, please refer to the [Changelog](https://github.com/hashicorp/boundary/blob/main/CHANGELOG.md).
-To learn about what Boundary consists of, we highly recommend you start at the [Getting Started Page](/docs/getting-started).
+To learn about what Boundary consists of, we highly recommend you start at the [Getting Started Page](/boundary/docs/getting-started).
 
-Lastly, for instructions on how to upgrade an existing Boundary deployment to v0.10.0, please review Boundary's [general upgrade guide](https://learn.hashicorp.com/tutorials/boundary/upgrade-version).
+Lastly, for instructions on how to upgrade an existing Boundary deployment to v0.10.0, please review Boundary's [general upgrade guide](/boundary/tutorials/oss-configuration/upgrade-version).
 
 ## Boundary v0.10.0 Highlights
 
@@ -25,7 +25,7 @@ without having to manually enter their brokered credentials.
 project scope to resources such as group members and principals that reside in other scopes.
 
 **SSH Credential Injection via Password and Public Key Authentication:** HCP Boundary now supports SSH Credential Injection, an active method of injecting credentials into an 
-established connection, so that credentials are never exposed to users. [Learn more here](https://learn.hashicorp.com/tutorials/boundary/hcp-ssh-cred-injection?in=boundary/hcp-administration).
+established connection, so that credentials are never exposed to users. [Learn more here](/boundary/tutorials/hcp-administration/hcp-ssh-cred-injection).
 
 
 
