--- a/website/content/docs/release-notes/v0_1_0.mdx
+++ b/website/content/docs/release-notes/v0_1_0.mdx
@@ -5,19 +5,19 @@ description: |-
   Boundary release notes for v0.1.0
 ---
 
-# [Boundary v0.1.0](https://www.boundaryproject.io/downloads)
+# [Boundary v0.1.0](/boundary/downloads)
 
-v0.1.0 is the first release of Boundary. As a result there are no changes, improvements, or bugfixes from past versions. To learn about what Boundary consists of, we highly recommend you start at the [Getting Started Page](/docs/getting-started).
+v0.1.0 is the first release of Boundary. As a result there are no changes, improvements, or bugfixes from past versions. To learn about what Boundary consists of, we highly recommend you start at the [Getting Started Page](/boundary/docs/getting-started).
 
 ## Boundary v0.1.0 Highlights
 
 In this initial release, Boundary provides:
 
 - Password-based authentication
-- Authenticated and authorized [TCP-based sessions](/docs/common-workflows/manage-sessions).
-- Identity and access management providing [role-based controls](/docs/common-workflows/manage-roles) for principals.
+- Authenticated and authorized [TCP-based sessions](/boundary/docs/common-workflows/manage-sessions).
+- Identity and access management providing [role-based controls](/boundary/docs/common-workflows/manage-roles) for principals.
 - A user interface for administration of Boundary resources.
 - A [Terraform provider](https://github.com/hashicorp/terraform-provider-boundary) for managing Boundary resources.
 - A fully instrumented command line interface for managing Boundary and for establishing and managing sessions.
-- A fully instrumented [Boundary golang SDK](/docs/api-clients/go-sdk).
+- A fully instrumented [Boundary golang SDK](/boundary/docs/api-clients/go-sdk).
 - A log of Boundary sessions exposed through Boundary's administrator UI and postgres database.
