--- a/website/content/docs/troubleshoot/common-errors.mdx
+++ b/website/content/docs/troubleshoot/common-errors.mdx
@@ -25,7 +25,7 @@ Error information:
 
 This error message indicates the user does not have permission to access the requested target. Ensure the right IAM policies are configured for the 
 user attempting to create a session. Users need to belong to a role in the target's scope with an authorize-session grant to access the target. 
-[Resource table](https://www.boundaryproject.io/docs/concepts/security/permissions/resource-table) page is a great reference for how to configure 
+[Resource table](/boundary/docs/concepts/security/permissions/resource-table) page is a great reference for how to configure 
 the right permission grants for Boundary roles.
 
 #### Error from controller when performing authorize-session action against given target
