--- a/website/content/docs/concepts/domain-model/hosts.mdx
+++ b/website/content/docs/concepts/domain-model/hosts.mdx
@@ -42,13 +42,13 @@ Static host types have the following additional attribute:
 - [Host Catalog][]
 - [Host Set][]
 
-[host catalog]: /docs/concepts/domain-model/host-catalogs
-[host catalogs]: /docs/concepts/domain-model/host-catalogs
-[host set]: /docs/concepts/domain-model/host-sets
-[host sets]: /docs/concepts/domain-model/host-sets
+[host catalog]: /boundary/docs/concepts/domain-model/host-catalogs
+[host catalogs]: /boundary/docs/concepts/domain-model/host-catalogs
+[host set]: /boundary/docs/concepts/domain-model/host-sets
+[host sets]: /boundary/docs/concepts/domain-model/host-sets
 
 ## Service API Docs
 
 The following services are relevant to this resource:
 
-- [Host Service](/api-docs/host-service)
+- [Host Service](/boundary/api-docs/host-service)
