--- a/website/content/docs/concepts/domain-model/managed-groups.mdx
+++ b/website/content/docs/concepts/domain-model/managed-groups.mdx
@@ -38,24 +38,24 @@ OIDC managed groups have the following additional attributes:
   specific information on the data available for this purpose see the [OIDC
   Managed Groups Filtering][] page.
 
-[filtering concepts]: /docs/concepts/filtering
-[oidc managed groups filtering]: /docs/concepts/filtering/oidc-managed-groups
+[filtering concepts]: /boundary/docs/concepts/filtering
+[oidc managed groups filtering]: /boundary/docs/concepts/filtering/oidc-managed-groups
 
 ## Referenced By
 
 - [Accounts][]
 - [Auth Method][]
 
-[accounts]: /docs/concepts/domain-model/accounts
-[auth method]: /docs/concepts/domain-model/auth-methods
-[roles]: /docs/concepts/domain-model/roles
+[accounts]: /boundary/docs/concepts/domain-model/accounts
+[auth method]: /boundary/docs/concepts/domain-model/auth-methods
+[roles]: /boundary/docs/concepts/domain-model/roles
 
 ## Service API Docs
 
 The following services are relevant to this resource:
 
-- [Managed Group Service](/api-docs/managed-group-service)
+- [Managed Group Service](/boundary/api-docs/managed-group-service)
 
 ## Tutorial
 
-Refer to the [Manage Users and Groups with HCP Boundary](https://learn.hashicorp.com/tutorials/boundary/hcp-manage-users-groups) tutorial to learn how to complete user management related tasks.
+Refer to the [Manage Users and Groups with HCP Boundary](/boundary/tutorials/hcp-administration/hcp-manage-users-groups) tutorial to learn how to complete user management related tasks.
