--- a/website/content/docs/concepts/service-discovery.mdx
+++ b/website/content/docs/concepts/service-discovery.mdx
@@ -21,20 +21,20 @@ as hosts.
 
 Boundary supports target/service discovery in three primary workflows: 
 
-**[Manual configuration](https://learn.hashicorp.com/tutorials/boundary/oss-manage-targets)**: 
+**[Manual configuration](/boundary/tutorials/oss-administration/oss-manage-targets)**: 
 Boundary administrators can manually configure static 
 hosts and targets via the administrator UI and CLI. Manual configuration of 
 targets with static hosts requires knowledge of the IP address or endpoint used 
 to connect to a host.
 
-**[Service discovery via configuration as code with Terraform](https://learn.hashicorp.com/tutorials/boundary/oss-getting-started-config)**: 
+**[Service discovery via configuration as code with Terraform](/boundary/tutorials/oss-getting-started/oss-getting-started-config)**: 
 Boundary is fully programmatically instrumented and the discovery and configuration of new 
 infrastructure targets can be automated with 
 [Boundary’s Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest/docs). 
 This allows for dynamic configuration of a host and target without the need 
 for prior knowledge of the target’s connection info. 
 
-**[Runtime service discovery via dynamic host catalogs](https://learn.hashicorp.com/tutorials/boundary/azure-host-catalogs)**: 
+**[Runtime service discovery via dynamic host catalogs](/boundary/tutorials/access-management/azure-host-catalogs)**: 
 Boundary dynamic host catalogs automate the ingestion of resources from 
 infrastructure providers into Boundary. Boundary hosts are automatically 
 created, updated and added to host sets in order to reflect the connection 
@@ -49,11 +49,11 @@ securely query infrastructure providers at runtime to discover and configure
 new services. Boundary dynamic host catalogs are written in go-plugin and run 
 as separate processes. Boundary administrators can define rules for which 
 external resources should be ingested into the catalog by 
-[creating dynamic host](https://www.boundaryproject.io/docs/concepts/domain-model/host-sets)
+[creating dynamic host](/boundary/docs/concepts/domain-model/host-sets)
  sets with an attributes filter. Attributes specify the fields which the plugin 
  should use to lookup which hosts should be members of this host set.
 
 Currently, Boundary supports dynamic host catalog implementations for AWS and 
 Azure and we will continue to grow this ecosystem to support additional providers. 
 
-You can get started with dynamic host catalogs [here](https://learn.hashicorp.com/tutorials/boundary/azure-host-catalogs).
+You can get started with dynamic host catalogs [here](/boundary/tutorials/access-management/azure-host-catalogs).
