--- a/website/content/docs/configuration/controller.mdx
+++ b/website/content/docs/configuration/controller.mdx
@@ -157,7 +157,7 @@ kms "aead" {
 ```
 
 Boundary supports many kinds of KMS integrations. For a complete guide to all available
-KMS types, see our [KMS documentation](/docs/configuration/kms).
+KMS types, see our [KMS documentation](/boundary/docs/configuration/kms).
 
 # Complete Configuration Example
 
