--- a/website/content/docs/configuration/worker/kms-worker.mdx
+++ b/website/content/docs/configuration/worker/kms-worker.mdx
@@ -58,7 +58,7 @@ kms "aead" {
 ```
 
 Boundary supports many kinds of KMS integrations. For a complete guide to all available
-KMS types, see our [KMS documentation](/docs/configuration/kms).
+KMS types, see our [KMS documentation](/boundary/docs/configuration/kms).
 
 # Complete Configuration Example
 
@@ -98,11 +98,11 @@ kms "aead" {
 }
 ```
 
-[`initial_upstreams`](/docs/configuration/worker/overview#initial_upstreams)
+[`initial_upstreams`](/boundary/docs/configuration/worker/overview#initial_upstreams)
 are used to connect to upstream Boundary clusters.
 
 ## Resources
 
 For more on how `tags{}` in the above configuration are used to facilitate
 routing to the correct target, refer to the [Worker
-Tags](/docs/concepts/filtering/worker-tags) page.
+Tags](/boundary/docs/concepts/filtering/worker-tags) page.
